# inspire_hand_left

./: CMakeLists.txt  left_hand_control.py  package.xml  test_urdf_load.py
config/: gazebo_controller.yaml  joint_names_left.yaml  joint_trajectory_controller.yaml
launch/: display.launch  gazebo.launch  gazebo（复件）.launch
urdf/: left.csv  left.urdf  left.xacro
urdf_left_with_force_sensor/: CMakeLists.txt
urdf_left_with_force_sensor/config/: mimic.yaml
urdf_left_with_force_sensor/install/: local_setup.sh  setup.sh
urdf_left_with_force_sensor/install/urdf_left_with_force_sensor/share/urdf_left_with_force_sensor/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
urdf_left_with_force_sensor/install/urdf_left_with_force_sensor/share/urdf_left_with_force_sensor/config/: left_controller.yaml  left_controller_rviz.yaml
urdf_left_with_force_sensor/install/urdf_left_with_force_sensor/share/urdf_left_with_force_sensor/launch/: left_controller.launch.py
urdf_left_with_force_sensor/install/urdf_left_with_force_sensor/share/urdf_left_with_force_sensor/rviz/: left.rviz  left_1.rviz
urdf_left_with_force_sensor/launch/: display.launch.py  left.launch.py  left_controller_rviz.launch.py  left_hand_control.launch.py  left_hand_control_rviz.launch.py  rviz.launch.py
urdf_left_with_force_sensor/log/: latest_build
urdf_left_with_force_sensor/script/: glove_hand_control.py
urdf_left_with_force_sensor/urdf/: urdf_left_with_force_sensor.urdf  urdf_left_with_force_sensor.xacro  urdf_left_with_force_sensor_1.xacro
(+3 files in other folders)
